# echo

./: .gitignore  README.md  pyproject.toml
data/: com.echo.nostr.gschema.xml  gschemas.compiled
echo/: __main__.py  application.py  window.py
echo/models/: __init__.py  dm.py  note.py  profile.py  relay.py
echo/services/: async_bridge.py  event_signer.py  key_manager.py  nostr_client.py  profile_service.py  relay_manager.py  zap_service.py
echo/theme/: colors.py  style.css
echo/utils/: bech32.py  config.py  helpers.py
echo/views/bookmarks/: bookmarks_view.py
echo/views/contacts/: contacts_view.py
echo/views/discover/: discover_view.py
echo/views/dms/: dm_conversation.py  dm_list.py
echo/views/feed/: feed_view.py  note_list.py  thread_view.py
echo/views/media/: lightbox_view.py  media_view.py
echo/views/modals/: account_switcher.py  compose_dialog.py  edit_profile_dialog.py  zap_dialog.py
echo/views/onboarding/: backup_key_view.py  controller.py  import_key_view.py  remote_signer_view.py  welcome_view.py
echo/views/profile/: profile_view.py
echo/views/relays/: relays_view.py
echo/views/settings/: accounts_page.py  appearance_page.py  general_page.py  notifications_page.py  settings_window.py  wallet_page.py
echo/widgets/: __init__.py  avatar.py  composer.py  contact_row.py  engagement_bar.py  error_dialog.py  hashtag_pill.py  media_widgets.py  note_card.py  relay_chip.py  relay_row.py  resize_handle.py  sidebar.py  user_row.py
tests/: test_models.py  test_services.py
