[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "echo"
version = "0.1.0"
description = "A GNOME-based Nostr social app"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "PyGObject>=3.42",
]

[project.scripts]
echo = "echo.__main__:main"

[tool.setuptools.packages.find]
include = ["echo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
